# nanoverl

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: architecture.md  config 怎么用.md
examples/GSM8K/: dataset_info.json
examples/configs/: GSM8K-GRPO-FSDP.json  GSM8K-GRPO-HF.json  Qwen2.5-0.8B-GSM8K-GRPO.json  debug_ppo.json  debug_rloo.json  fsdp_single_node_ppo.json  fsdp_vllm_single_node_ppo.json  hf_local_ppo.json  hf_vllm_local_ppo.json
examples/data/: debug_prompts.jsonl
examples/data_preprocess/: gsm8k.py  gsm8k_no_template.py
examples/reward_fn/: gsm8k.py
logs/nanoverl/: debug_ppo.jsonl
nanoverl/: __init__.py  config.py
nanoverl/algos/: __init__.py  advantages.py  base.py  kl.py  on_policy.py  ppo.py  registry.py
nanoverl/backends/: __init__.py  hf.py  vllm.py
nanoverl/checkpoint/: __init__.py  manager.py
nanoverl/cli/: train_rl.py
nanoverl/core/: __init__.py  batch.py
nanoverl/data/: __init__.py  dataset.py
nanoverl/distributed/: __init__.py  ray_runtime.py  torch_runtime.py
nanoverl/logging/: __init__.py  metrics.py  trackers.py
nanoverl/reward/: __init__.py  base.py
nanoverl/rollout/: __init__.py  base.py  debug.py  hf.py  registry.py  sync.py  vllm.py
nanoverl/trainer/: __init__.py  artifacts.py  rl_trainer.py  validation.py
nanoverl/workers/: __init__.py  hf.py  (+3 more)
tests/: test_algorithm_plugins.py  test_algos.py  test_backend_registry.py  test_batch.py  test_checkpoint.py  test_data_loader.py  test_fsdp_backend.py  test_hf_backend.py  test_phase2.py  test_rollout_sync.py  test_trainer_smoke.py  test_vllm_backend.py
(+7 files in other folders)
